--- a/countup.html
+++ b/countup.html
@@ -1,66 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Count-Up Timer</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    padding: 10px;
-    text-align: center;
-  }
-  #countup {
-    font-size: 24px;
-    font-weight: bold;
-    color: #0078d4; /* SharePoint blue */
-  }
-  marquee {
-    display: block;
-    margin-top: 20px;
-    font-size: 20px;
-    color: darkgreen;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Count-Up Timer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      text-align: center;
+    }
+
+    #countup {
+      font-size: 28px;
+      font-weight: bold;
+      color: #0078d4; /* SharePoint blue */
+      margin-bottom: 20px;
+    }
+
+    #marqueeWrapper {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      box-sizing: border-box;
+    }
+
+    #marqueeText {
+      display: inline-block;
+      font-size: 20px;
+      color: darkgreen;
+      animation: scroll-left 15s linear infinite;
+    }
+
+    @keyframes scroll-left {
+      0% {
+        transform: translateX(100%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+  </style>
 </head>
 <body>
   <div id="countup">Loading...</div>
-  <marquee behavior="scroll" direction="left" id="marqueeText">Waiting for timer...</marquee>
+
+  <div id="marqueeWrapper">
+    <div id="marqueeText">Waiting for timer...</div>
+  </div>
 
   <script>
-    function getStartTimeCDT() {
-      var now = new Date();
-      var utcYear = now.getUTCFullYear();
-      var utcMonth = now.getUTCMonth();
-      var utcDate = now.getUTCDate();
-      return new Date(Date.UTC(utcYear, utcMonth, utcDate, 13, 0, 0)).getTime(); // 8 AM CDT = 13:00 UTC
-    }
+    document.addEventListener("DOMContentLoaded", function () {
+      // CDT is UTC-5, so 8 AM CDT = 13:00 UTC
+      // Date.UTC: months are 0-indexed (September = 8)
+      const startDate = new Date(Date.UTC(2025, 8, 15, 13, 0, 0)).getTime();
 
-    var startDate = getStartTimeCDT();
+      function updateTimer() {
+        const now = new Date().getTime();
+        const elapsed = now - startDate;
 
-    function updateTimer() {
-      var now = new Date().getTime();
-      var elapsed = now - startDate;
+        const countupElem = document.getElementById("countup");
+        const marqueeElem = document.getElementById("marqueeText");
 
-      if (elapsed < 0) {
-        document.getElementById("countup").innerHTML = "Starting soon...";
-        document.getElementById("marqueeText").textContent = "Starts at 8 AM CDT...";
-        return;
+        if (elapsed < 0) {
+          countupElem.innerHTML = "Starting soon...";
+          marqueeElem.textContent = "Starts at 8:00 AM CDT on September 15, 2025...";
+          return;
+        }
+
+        const days = Math.floor(elapsed / (1000 * 60 * 60 * 24));
+        const hours = Math.floor((elapsed % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        const minutes = Math.floor((elapsed % (1000 * 60 * 60)) / (1000 * 60));
+        const seconds = Math.floor((elapsed % (1000 * 60)) / 1000);
+
+        const message = `${days}d ${hours}h ${minutes}m ${seconds}s`;
+        countupElem.innerHTML = message;
+        marqueeElem.textContent = `${message} — Elapsed since 8 AM CDT (Zurich NA DR Exercise 2025)`;
       }
 
-      var days = Math.floor(elapsed / (1000 * 60 * 60 * 24));
-      var hours = Math.floor((elapsed % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      var minutes = Math.floor((elapsed % (1000 * 60 * 60)) / (1000 * 60));
-      var seconds = Math.floor((elapsed % (1000 * 60)) / 1000);
-
-      var message = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-      document.getElementById("countup").innerHTML = message;
-      document.getElementById("marqueeText").textContent = message + " — Elapsed since 8 AM CDT (Zurich NA DR Exercise 2025)";
-    }
-
-    updateTimer();
-    setInterval(updateTimer, 1000);
+      updateTimer();
+      setInterval(updateTimer, 1000);
+    });
   </script>
 </body>
 </html>
-	
