--- a/countup.html
+++ b/countup.html
@@ -75,7 +75,7 @@
 
         const message = `${days}d ${hours}h ${minutes}m ${seconds}s`;
         countupElem.innerHTML = message;
-        marqueeElem.textContent = `${message} — Elapsed since 8 AM CDT (Zurich NA DR Exercise 2025)`;
+        marqueeElem.textContent = `${message} — Elapsed since 15th Sept : 8:00 AM CDT (Zurich NA DR Exercise 2025)`;
       }
 
       updateTimer();
@@ -84,3 +84,4 @@
   </script>
 </body>
 </html>
+
