--- a/countup.html
+++ b/countup.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Count-Up Timer (Debug)</title>
+  <title>Count-Up Timer (With Split + Remaining)</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; text-align: center; }
-    #countup { font-size: 28px; font-weight: bold; color: #0078d4; margin-bottom: 20px; }
+    #countup, #split, #consumed, #remaining {
+      font-size: 20px; margin: 10px 0;
+    }
+    #countup { font-size: 28px; font-weight: bold; color: #0078d4; }
+    #split { color: #d40000; }
+    #consumed { color: #2e8b57; }
+    #remaining { color: #ff8c00; }
     #marqueeWrapper { width:100%; overflow:hidden; white-space:nowrap; box-sizing: border-box; }
     #marqueeText { display:inline-block; font-size:20px; color:darkgreen; animation: scroll-left 15s linear infinite; }
     @keyframes scroll-left {
@@ -17,46 +23,57 @@
 </head>
 <body>
   <div id="countup">Loading...</div>
+  <div id="split"></div>
+  <div id="consumed"></div>
+  <div id="remaining"></div>
   <div id="marqueeWrapper">
     <div id="marqueeText">Waiting for timer...</div>
   </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      console.log("DOM loaded");
-      // Set the start date for 8 AM CDT 15 Sep 2025
-      // CDT = UTC-5 → so 8 AM CDT is 13:00 UTC
-      const startDate = new Date(Date.UTC(2025, 8, 15, 13, 0, 0)).getTime();
-      console.log("Computed startDate (ms):", startDate, "→", new Date(startDate).toUTCString());
+      // Time Points
+      const startDate = new Date(Date.UTC(2025, 8, 15, 13, 0, 0)).getTime();  // 15 Sep 08:00 CDT
+      const splitDate = new Date(Date.UTC(2025, 8, 17, 17, 0, 0)).getTime();  // 17 Sep 12:00 CDT
+      const endDate   = new Date(Date.UTC(2025, 8, 20, 0, 0, 0)).getTime();   // 19 Sep 19:00 CDT
+
+      function formatDuration(ms) {
+        const days = Math.floor(ms / (1000 * 60 * 60 * 24));
+        const hours = Math.floor((ms % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        const minutes = Math.floor((ms % (1000 * 60 * 60)) / (1000 * 60));
+        const seconds = Math.floor((ms % (1000 * 60)) / 1000);
+        return `${days}d ${hours}h ${minutes}m ${seconds}s`;
+      }
 
       function updateTimer() {
         const now = new Date().getTime();
-        console.log("Now (ms):", now, "→", new Date(now).toUTCString());
-        const elapsed = now - startDate;
-        console.log("Elapsed (ms):", elapsed);
-        
+
         const countupElem = document.getElementById("countup");
+        const splitElem = document.getElementById("split");
+        const consumedElem = document.getElementById("consumed");
+        const remainingElem = document.getElementById("remaining");
         const marqueeElem = document.getElementById("marqueeText");
 
-        if (elapsed < 0) {
+        if (now < startDate) {
           countupElem.innerHTML = "Starting soon...";
+          splitElem.innerHTML = "";
+          consumedElem.innerHTML = "";
+          remainingElem.innerHTML = "";
           marqueeElem.textContent = "Starts at 8:00 AM CDT on September 15, 2025...";
           return;
         }
 
-        const days = Math.floor(elapsed / (1000 * 60 * 60 * 24));
-        const hours = Math.floor((elapsed % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        const minutes = Math.floor((elapsed % (1000 * 60 * 60)) / (1000 * 60));
-        const seconds = Math.floor((elapsed % (1000 * 60)) / 1000);
+        const elapsed = now - startDate;
+        const durationTotal = endDate - startDate;
+        const timeRemaining = endDate - now;
 
-        const message = `${days}d ${hours}h ${minutes}m ${seconds}s`;
+        // Display count-up
+        const message = formatDuration(elapsed);
         countupElem.innerHTML = message;
-        marqueeElem.textContent = `${message} — Elapsed since 15th September 8:00 AM CDT (Zurich NA DR Exercise 2025)`;
-      }
 
-      updateTimer();
-      setInterval(updateTimer, 1000);
-    });
-  </script>
-</body>
-</html>
+        // Marquee text
+        marqueeElem.textContent = `${message} — Elapsed since 15th September 8:00 AM CDT (Zurich NA DR Exercise 2025)`;
+
+        // Split Info
+        if (now >= splitDate) {
+          const splitElapsed = s
