--- a/countup.html
+++ b/countup.html
@@ -101,8 +101,9 @@
       document.getElementById("total").innerHTML = `📊 Full Duration (Start → End): <strong>${formatDuration(totalDuration)}</strong>`;
 
       document.getElementById("marqueeText").textContent =
-        `Zurich NA DR Exercise 2025 ran from 15 Sep, 8:00 AM CDT to 19 Sep, 7:00 PM CDT — Total Duration: ${formatDuration(totalDuration)}`;
+        `Zurich NA DR Exercise 2025 was scheduled from 15 Sep, 8:00 AM CDT to 19 Sep, 7:00 PM CDT — Total Duration: ${formatDuration(totalDuration)}`;
     });
   </script>
 </body>
 </html>
+
